# eu-saas

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: settings.toml
deploy/docker/: Dockerfile  docker-compose.yml  init-db.sql
deploy/k8s/: api-deployment.yml  namespace.yml  network-policies.yml  postgres-deployment.yml  prometheus.yml  worker-deployment.yml
deploy/terraform/: main.tf
docs/adr/: 001-schema-per-tenant.md  002-argon2id-password-hashing.md  003-rs256-jwt.md  004-clean-architecture.md  005-cost-anomaly-detection.md
docs/architecture/: overview.md
src/application/schemas/: pagination.py
src/application/services/: auth_service.py  billing_service.py  gdpr_service.py  tenant_service.py
src/application/tasks/: billing_tasks.py  celery_app.py  gdpr_tasks.py  tenant_tasks.py
src/domain/events/: tenant_events.py
src/domain/exceptions/: __init__.py  tenant_exceptions.py
src/domain/models/: __init__.py  audit.py  billing.py  tenant.py  user.py
src/domain/services/: cost_calculator.py  tenant_lifecycle.py
src/infrastructure/: adapters.py  container.py  settings.py
src/infrastructure/auth/: jwt_handler.py  password_handler.py  rbac.py
src/infrastructure/cost/: anomaly_detector.py  metrics_collector.py  pricing_engine.py
src/infrastructure/database/: config.py  engine.py  migration_runner.py  models.py  repository.py  tenant_schema_manager.py
src/infrastructure/gdpr/: data_exporter.py  erasure_handler.py  retention_engine.py
src/infrastructure/observability/: logging_config.py  metrics.py
src/presentation/: main.py
src/presentation/middleware/: request_logging.py  tenant_context.py
tests/contract/: test_openapi_contract.py  test_schema_validation.py
tests/integration/: conftest.py  test_audit_repository.py  test_billing_repository.py  test_full_tenant_lifecycle.py  test_tenant_repository.py  test_tenant_schema_manager.py  test_user_repository.py
tests/load/: locustfile.py
tests/unit/: conftest.py
tests/unit/app/: test_auth_service.py  test_billing_service.py  test_gdpr_service.py  test_tenant_service.py
tests/unit/domain/: test_audit_model.py  test_billing_model.py  test_cost_calculator.py  test_domain_exceptions.py  (+4 more)
(+21 files in other folders)
